# libuartdev

./: .gitignore  CMakeLists.txt  README.md  build.sh
example/: CMakeLists.txt  uartecho.c
include/: libuartdev.h
src/: libuartdev.c
